[package]
name = "dunecrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.23", features = ["blocking"]}
tokio = "1.35.1"
sqlite3 = "0.24.0"
scraper = "0.18.1"
http = "1.0.0"
